[PRIMA-12050]: [Pyxis React] Implementazione del componente Button (#23)

--- a/packages/pyxis-scss/src/scss/components/buttons.scss
+++ b/packages/pyxis-scss/src/scss/components/buttons.scss
@@ -183,7 +183,7 @@ $_sizes: (
 /// @access private
 .button {
   cursor: pointer;
-  display: grid;
+  display: inline-grid;
   grid-auto-flow: column;
   justify-content: center;
   place-items: center;
