[PRIMA-12188]: [Pyxis Scss] Implement the Text Field (#29)

--- a/packages/pyxis-scss/src/scss/components/forms/label.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/label.scss
@@ -3,8 +3,8 @@
 /// @group COMPONENTS
 ////
 
-@use "../lib";
-@use "../foundations";
+@use "../../lib";
+@use "../../foundations";
 
 /// Set general properties for label component
 ///
