[PRIMA-12254]: [Pyxis Scss] Implement the textarea (#32)

--- a/packages/pyxis-scss/src/scss/components/forms/fields/field.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/fields/field.scss
@@ -5,11 +5,10 @@
 
 @use "../../../lib";
 @use "../../../foundations";
-@use "../utils";
+@use "../mixins";
+@use "../variables";
 
 $_borderWidth: lib.rem(2px);
-$_height: lib.rem(50px);
-$_heightSmall: lib.rem(35px);
 $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
 
 /// Add the same color and border-color to element.
@@ -43,7 +42,7 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
 ///
 /// @example scss - Small input
 ///    <div class="form-field form-field--small">
-///      <input type="text" class="form-field__text" placeholder="Text field"/>
+///      <input type="text" class="form-field__text form-field__text--small" placeholder="Text field"/>
 ///    </div>
 ///
 /// @example scss - Input field with leading icon
@@ -84,21 +83,27 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
 ///      </label>
 ///    </div>
 ///
+/// @example scss - Textarea
+///    <div className="form-field">
+///      <textarea className="form-field__textarea" placeholder="Text area" />
+///    </div>
+///
+/// @example scss - Textarea small
+///    <div className="form-field form-field--small">
+///      <textarea className="form-field__textarea form-field__textarea--small" placeholder="Text area" />
+///    </div>
+///
 /// @access public
 .form-field {
   @include foundations.radius(xs);
   @include foundations.text(m, book);
-  @include utils.fieldState;
+  @include mixins.fieldState;
   background-color: foundations.color(neutralLight);
   border: $_borderWidth solid foundations.color(neutral85);
   color: foundations.color(neutralBase);
-  height: $_height;
+  cursor: text;
   position: relative;
   width: 100%;
-}
-
-.form-field--small {
-  height: $_heightSmall;
 }
 
 .form-field__wrapper {
@@ -109,8 +114,7 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
 .form-field__addon {
   color: foundations.color(neutral25);
   display: grid;
-  height: 100%;
-  min-width: $_height - $_borderWidth * 2;
+  min-width: variables.$height - $_borderWidth * 2;
   place-items: center;
   pointer-events: none;
   user-select: none;
@@ -131,7 +135,7 @@ $_transitionTiming: 0.2s cubic-bezier(0.3, 0.07, 0.34, 1);
   }
 
   .form-field--small & {
-    min-width: $_heightSmall - $_borderWidth * 2;
+    min-width: variables.$heightSmall - $_borderWidth * 2;
   }
 
   .form-field:focus-within &,
